--- a/src/main/resources/db/migration/v1/tables-init.yaml
+++ b/src/main/resources/db/migration/v1/tables-init.yaml
@@ -1,101 +1,47 @@
 databaseChangeLog:
 
   - changeSet:
-      id: created_customer_table
-      author: nurmukhammad
-      changes:
-          - createTable:
-              tableName: customer
-              columns:
-                - column:
-                    name: id
-                    type: BIGINT
-                    autoIncrement: true
-                    constraints:
-                      primaryKey: true
-                      nullable: false
-                - column:
-                    name: first_name
-                    type: VARCHAR(50)
-                    constraints:
-                      nullable: false
-                - column:
-                   name: last_name
-                   type: VARCHAR(50)
-                   constraints:
-                     nullable: false
-                - column:
-                    name: address
-                    type: VARCHAR(255)
-                    constraints:
-                      nullable: false
-                - column:
-                    name: passport_series
-                    type: VARCHAR(5)
-                    constraints:
-                      nullable: false
-                - column:
-                    name: passport_number
-                    type: VARCHAR(15)
-                    constraints:
-                      nullable: false
-                - column:
-                    name: role
-                    type: SMALLINT
-                    defaultValueNumeric: 1
-                - column:
-                    name: status
-                    type: VARCHAR(20)
-                    defaultValue: 'ACTIVE'
-                - column:
-                    name: created_at
-                    type: TIMESTAMP
-                    defaultValueComputed: CURRENT_TIMESTAMP
-
-  - changeSet:
       id: created_account_table
       author: nurmukhammad
       changes:
-          - createTable:
-              tableName: account
-              columns:
-                - column:
-                    name: id
-                    type: BIGINT
-                    autoIncrement: true
-                    constraints:
-                      primaryKey: true
-                      nullable: false
-                - column:
-                    name: created_at
-                    type: TIMESTAMP
-                    defaultValueComputed: CURRENT_TIMESTAMP
-                - column:
-                    name: customer_id
-                    type: BIGINT
-                    constraints:
-                      nullable: false
-                - column:
-                    name: balance
-                    type: BIGINT
-                    defaultValueNumeric: 0
-                    constraints:
-                      nullable: false
-
-                - column:
-                    name: status
-                    type: VARCHAR(20)
-                    defaultValue: 'ACTIVE'
-          - addForeignKeyConstraint:
-              baseTableName: account
-              baseColumnNames: customer_id
-              referencedTableName: customer
-              referencedColumnNames: id
-              constraintName: fk_account_customer
-          - sql:
-              sql: ALTER TABLE account
-                ADD CONSTRAINT chk_balance_non_negative
-                CHECK (balance >= 0);
+        - createTable:
+            tableName: account
+            columns:
+              - column:
+                  name: id
+                  type: BIGINT
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
+              - column:
+                  name: user_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: balance
+                  type: NUMERIC(19,2)
+                  defaultValueNumeric: 0
+                  constraints:
+                    nullable: false
+              - column:
+                  name: status
+                  type: VARCHAR(20)
+                  defaultValue: 'ACTIVE'
+              - column:
+                  name: currency_code
+                  type: VARCHAR(10)
+                  constraints:
+                    nullable: false
+        - sql:
+            sql: >
+              ALTER TABLE account
+              ADD CONSTRAINT chk_balance_non_negative CHECK (balance >= 0);
 
 
   - changeSet:
@@ -115,16 +61,7 @@ databaseChangeLog:
               - column:
                   name: expiration_date
                   type: DATE
-                  constraints:
-                    nullable: false
-              - column:
-                  name: currency_code
-                  type: INTEGER
-                  constraints:
-                    nullable: false
-              - column:
-                  name: card_number_encrypted
-                  type: VARCHAR(255)
+                  defaultValueComputed: "CURRENT_DATE + INTERVAL '4 years'"
                   constraints:
                     nullable: false
               - column:
@@ -134,8 +71,24 @@ databaseChangeLog:
                     nullable: false
                     unique: true
               - column:
+                  name: user_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
                   name: card_number_hash
-                  type: VARCHAR(255)
+                  type: VARCHAR(250)
+                  constraints:
+                    unique: true
+                    nullable: false
+              - column:
+                  name: card_number_encrypted
+                  type: VARCHAR(250)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: last_four_digits
+                  type: VARCHAR(4)
                   constraints:
                     nullable: false
               - column:
@@ -151,12 +104,173 @@ databaseChangeLog:
                   name: status
                   type: VARCHAR(20)
                   defaultValue: 'ACTIVE'
+
+  - changeSet:
+      id: created_refresh_tokens_table
+      author: nurmukhammad
+      changes:
+        - createTable:
+            tableName: refresh_tokens
+            columns:
+              - column:
+                  name: id
+                  type: BIGINT
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: user_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: token
+                  type: VARCHAR(250)
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: expiry_date
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: revoked
+                  type: BOOLEAN
+                  constraints:
+                    nullable: false
+
+  - changeSet:
+      id: created_users_table
+      author: nurmukhammad
+      changes:
+        - createTable:
+            tableName: users
+            columns:
+              - column:
+                  name: id
+                  type: BIGINT
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: username
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: password
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: first_name
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: last_name
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: address
+                  type: VARCHAR(255)
+              - column:
+                  name: passport_series
+                  type: VARCHAR(5)
+              - column:
+                  name: passport_number
+                  type: VARCHAR(15)
+              - column:
+                  name: role
+                  type: VARCHAR(20)
+                  defaultValue: 'USER'
+              - column:
+                  name: status
+                  type: VARCHAR(20)
+                  defaultValue: 'ACTIVE'
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
+  - changeSet:
+      id: create_transfer_table
+      author: nurmukhammad
+      changes:
+          - createTable:
+              tableName: transfer
+              columns:
+                - column:
+                    name: id
+                    type: BIGINT
+                    autoIncrement: true
+                    constraints:
+                      primaryKey: true
+                      nullable: false
+                - column:
+                    name: to_card_id
+                    type: BIGINT
+                    constraints:
+                      nullable: false
+                - column:
+                    name: from_card_id
+                    type: BIGINT
+                    constraints:
+                      nullable: false
+                - column:
+                    name: amount
+                    type: NUMERIC(19,2)
+                    constraints:
+                      nullable: false
+                - column:
+                    name: created_at
+                    type: TIMESTAMP
+                    defaultValueComputed: CURRENT_TIMESTAMP
+                - column:
+                    name: comment
+                    type: VARCHAR(255)
+
+  - changeSet:
+      id: add_foreign_keys
+      author: nurmukhammad
+      changes:
+        - addForeignKeyConstraint:
+            baseTableName: account
+            baseColumnNames: user_id
+            referencedTableName: users
+            referencedColumnNames: id
+            constraintName: fk_account_user
         - addForeignKeyConstraint:
             baseTableName: card
             baseColumnNames: account_id
             referencedTableName: account
             referencedColumnNames: id
             constraintName: fk_card_account
-
-
-
+        - addForeignKeyConstraint:
+            baseTableName: card
+            baseColumnNames: user_id
+            referencedTableName: users
+            referencedColumnNames: id
+            constraintName: fk_card_user
+        - addForeignKeyConstraint:
+            baseTableName: transfer
+            baseColumnNames: from_card_id
+            referencedTableName: card
+            referencedColumnNames: id
+            constraintName: fk_transfer_from_card
+        - addForeignKeyConstraint:
+            baseTableName: transfer
+            baseColumnNames: to_card_id
+            referencedTableName: card
+            referencedColumnNames: id
+            constraintName: fk_transfer_to_card
+        - addForeignKeyConstraint:
+            baseTableName: refresh_tokens
+            baseColumnNames: user_id
+            referencedTableName: users
+            referencedColumnNames: id
+            constraintName: fk_refresh_tokens_users
